lots of videos and stuff

--- a/index old.html
+++ b/index old.html
@@ -63,26 +63,6 @@
                     </span>
                 </p>
             </div>
-            <div class="center-container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">
-                        <span style="color: #f0f0f0;">Recent Creation That I Like</span>
-                    </h2>
-                </div>
-                <div class="col-lg-8 mb-4 d-flex justify-content-center">
-                    <div class="portfolio-item text-center">
-                        <img class="img-fluid portfolio-image" src="assets/img/portfolio/Duality.png" alt="Duality" loading="lazy"/>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Recent Creation</div>
-                            <div class="portfolio-extra-description">
-                                <p>This is a recent creation that I personally love. Edit this description as needed.</p>
-                            </div>
-                            <button class="toggle-description" style="display: none;">Show Description <span class="arrow">&#x25BC;</span></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
         </section>
         <div class="divider"></div> 
         <section class="page-section" id="building">
@@ -619,7 +599,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/where_am_i.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -633,7 +613,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/atmospheric_thing.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -647,7 +627,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/tenebris_vox.ogg" type="audio/ogg">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -664,7 +644,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/cabinfever.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -678,7 +658,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/in_between.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -692,7 +672,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/truth_be_told.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -706,7 +686,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/the_forever_night_sky.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -720,7 +700,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/the_art_gallery.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -734,7 +714,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/zmgr_vcrg.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -751,7 +731,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/circuitry.MP3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -768,7 +748,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/the_descent.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -785,7 +765,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/cyberpunk_music_test.MP3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -802,7 +782,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/retromoon.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -816,7 +796,7 @@
                             <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/eightyeight.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -833,7 +813,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/the_universe_on_the_other_side_of_a_black_hole.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -850,7 +830,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/idk_what_to_call_this.MP3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -867,7 +847,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/on_the_run.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -884,7 +864,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/the_future_cant_wait.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -901,7 +881,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/mio.mp3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -918,7 +898,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/the_thoughts_i_dont_own.MP3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -935,7 +915,7 @@
                             </button>
                         </div>
                         <audio class="audio-element">
-                            <source src="assets/audio/the_wild_saloon.MP3" type="audio/mp3">
+                            <source src="assets/audio/notfound.mp3" type="audio/mp3">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -1030,7 +1010,6 @@
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
         <script async src="js/scripts.js" defer></script>  
-        <script src="js/warningBanner.js"></script>
     </body>
     <div id="lightbox" class="lightbox-overlay">
         <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
