--- a/portfolio-music.html
+++ b/portfolio-music.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <link href="css/styles.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
+        <script src="js/warningBanner.js"></script>
     </head>
 
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
@@ -28,9 +29,7 @@
                 <div class="row w-100">
                     <div class="col-12">
                         <ul class="navbar-nav flex-row text-uppercase justify-content-center py-3" id="mainNavTop">
-                            <li class="nav-item mx-3">
-                                <button class="nav-link" href="index.html"><strong>Home</strong></button>
-                            </li>
+                            <li class="nav-item"><a class="nav-link" href="index.html"><strong>Home</strong></a></li>
                             <li class="nav-item mx-3" data-submenu="portfolioSubNav">
                                 <button class="nav-link"><strong>Portfolio</strong></button>
                             </li>
@@ -88,8 +87,8 @@
                 <p><span style="color: #f0f0f0;">Some audio and music I put on this portfolio can be free to download and use for whatever purposes you may want, credit is appreciated but not mandatory, music already used in games or made for games are and will always be non-downloadable.</span></p>
                 <div class="row-music">
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Where Am I</div>
+                        <h4><span style="color: #f0f0f0;">Where Am I</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Atmospheric</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -102,8 +101,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Atmospheric Test</div>
+                        <h4><span style="color: #f0f0f0;">Atmospheric Thing</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Atmospheric</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -116,8 +115,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Tenebris Vox</div>
+                        <h4><span style="color: #f0f0f0;">Tenebris Vox</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Atmospheric</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -130,8 +129,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Ambient</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Cabin Fever (Played and recorded LIVE)</div>
+                        <h4><span style="color: #f0f0f0;">Cabin Fever (Played and recorded LIVE)</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Ambient</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -147,8 +146,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Ambient</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">The In-Between</div>
+                        <h4><span style="color: #f0f0f0;">The In-Between</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Ambient</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -161,8 +160,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Ambient</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Truth Be Told</div>
+                        <h4><span style="color: #f0f0f0;">Truth Be Told</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Ambient</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -175,8 +174,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Ambient</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">The Forever Night Sky</div>
+                        <h4><span style="color: #f0f0f0;">The Forever Night Sky</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Ambient</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -189,8 +188,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Horror</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">The Art Gallery</div>
+                        <h4><span style="color: #f0f0f0;">The Art Gallery</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Horror</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -203,8 +202,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Horror</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Zmgr Vcrg</div>
+                        <h4><span style="color: #f0f0f0;">Zmgr Vcrg</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Horror</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -217,8 +216,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Synthwave</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Circuitry</div>
+                        <h4><span style="color: #f0f0f0;">Circuitry</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Synthwave</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -234,8 +233,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Calming</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">The Descent</div>
+                        <h4><span style="color: #f0f0f0;">The Descent</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Calming</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -251,8 +250,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Electronic</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">Electronic Thing</div>
+                        <h4><span style="color: #f0f0f0;">Electronic Thing</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Electronic</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -268,8 +267,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Electronic</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">The Universe On The Other Side Of A Black Hole</div>
+                        <h4><span style="color: #f0f0f0;">The Universe On The Other Side Of A Black Hole</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Electronic</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -285,8 +284,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Electronic</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">IDK What To Call This</div>
+                        <h4><span style="color: #f0f0f0;">IDK What To Call This</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Electronic</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -302,8 +301,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Electronic</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">On The Run</div>
+                        <h4><span style="color: #f0f0f0;">On The Run</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Electronic</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -319,8 +318,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Lofi</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">The Future Can't Wait</div>
+                        <h4><span style="color: #f0f0f0;">The Future Can't Wait</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Lofi</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -336,8 +335,8 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
-                        <h4><span style="color: #f0f0f0;">Lofi</span></h4>
-                        <div class="portfolio-caption-subheading text-muted">The Thoughts I Don't Own</div>
+                        <h4><span style="color: #f0f0f0;">The Thoughts I Don't Own</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Lofi</div>
                         <div class="custom-audio-player">
                             <button class="play-pause-button">Play</button>
                             <input type="range" class="seek-slider" value="0" max="100">
@@ -354,7 +353,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>        
 
         <div class="divider"></div>
         
@@ -393,8 +392,8 @@
         </footer>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
-        <script async src="js/scripts.js" defer></script>  
-        <script src="js/warningBanner.js"></script>
+        <script src="js/scripts.js"></script>   
+        
     </body>
     <div id="lightbox" class="lightbox-overlay">
         <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
