--- a/portfolio-modeling.html
+++ b/portfolio-modeling.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <link href="css/styles.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
+        <script src="js/warningBanner.js"></script>
     </head>
 
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
@@ -28,9 +29,7 @@
                 <div class="row w-100">
                     <div class="col-12">
                         <ul class="navbar-nav flex-row text-uppercase justify-content-center py-3" id="mainNavTop">
-                            <li class="nav-item mx-3">
-                                <button class="nav-link" href="index.html"><strong>Home</strong></button>
-                            </li>
+                            <li class="nav-item"><a class="nav-link" href="index.html"><strong>Home</strong></a></li>
                             <li class="nav-item mx-3" data-submenu="portfolioSubNav">
                                 <button class="nav-link"><strong>Portfolio</strong></button>
                             </li>
@@ -168,8 +167,8 @@
         </footer>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
-        <script async src="js/scripts.js" defer></script>  
-        <script src="js/warningBanner.js"></script>
+        <script src="js/scripts.js"></script>   
+        
     </body>
     <div id="lightbox" class="lightbox-overlay">
         <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
