--- a/free-stuff.html
+++ b/free-stuff.html
@@ -12,7 +12,7 @@
         <link href="css/styles.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
         <script src="js/freestuff.js"></script>
-        <script src="js/warningBanner.js"></script>
+        <script src="js/warningbanner.js"></script>
     </head>
 
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
