--- a/portfolio-animating.html
+++ b/portfolio-animating.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <link href="css/styles.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-        <script src="js/warningBanner.js"></script>
+        <script src="js/warningbanner.js"></script>
     </head>
 
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
